; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_error.c_mrb_raise.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_error.c_mrb_raise.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RClass = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mrb_raise(i32* %0, %struct.RClass* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.RClass*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.RClass* %1, %struct.RClass** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load %struct.RClass*, %struct.RClass** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @mrb_str_new_cstr(i32* %10, i8* %11)
  %13 = call i32 @mrb_exc_new_str(i32* %8, %struct.RClass* %9, i32 %12)
  %14 = call i32 @mrb_exc_raise(i32* %7, i32 %13)
  ret void
}

declare dso_local i32 @mrb_exc_raise(i32*, i32) #1

declare dso_local i32 @mrb_exc_new_str(i32*, %struct.RClass*, i32) #1

declare dso_local i32 @mrb_str_new_cstr(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
